<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    	
 		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@android:color/transparent"
		    android:orientation="vertical"
		    android:padding="10dp"
		    >
		    
 		    <RelativeLayout
 		        android:id="@+id/layoutTitle" 
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        >
				
				<TextView
				    android:id="@+id/textTitle"
				    android:text="@string/activation"
				   	android:layout_width="wrap_content"
				   	android:layout_height="wrap_content"
				   	android:textSize="25sp"
				   	android:layout_centerHorizontal="true"
				    />
				 		        
 		    </RelativeLayout>
 		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" 
		        >
		        
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="20"
		            android:layout_height="wrap_content"
		            android:text="@string/name"
		             />
		        
		        <EditText
		            android:id="@+id/editTextName"
		            android:layout_width="0dp"
		            android:layout_weight="80"
		            android:layout_height="wrap_content"
		            android:hint="@string/name"
		            />
		   </LinearLayout>
		   
		    
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" 
		        >
		        
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="20"
		            android:layout_height="wrap_content"
		            android:text="@string/phone"
		             />
		        
		        <EditText
		            android:id="@+id/editTextPhone"
		            android:layout_width="0dp"
		            android:layout_weight="80"
		            android:layout_height="wrap_content"
		            android:hint="@string/phone" 
		            android:inputType="phone"
		            />
		    </LinearLayout>
		    
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" 
		        >
		        
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="20"
		            android:layout_height="wrap_content"
		            android:text="@string/address"
		             />
		        
		        <EditText
		            android:id="@+id/editTextAddress"
		            android:layout_width="0dp"
		            android:layout_weight="80"
		            android:layout_height="wrap_content"
		            android:hint="@string/address"
		            />
		    </LinearLayout>
		    
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" 
		        >
		        
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="20"
		            android:layout_height="wrap_content"
		            android:text="@string/remark"
		             />
		        
		        <EditText
		            android:id="@+id/editTextRemark"
		            android:layout_width="0dp"
		            android:layout_weight="80"
		            android:layout_height="wrap_content"
		            android:hint="@string/remark" 
		            />
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" 
		        >
		        
		        <TextView
		            android:layout_width="0dp"
		            android:layout_weight="20"
		            android:layout_height="wrap_content"
		            android:text="@string/email"
		             />
		        
		        <EditText
		            android:id="@+id/editTextEmail"
		            android:layout_width="0dp"
		            android:layout_weight="80"
		            android:layout_height="wrap_content"
		            android:hint="@string/email" 
		            android:inputType="textEmailAddress"
		            />
		    </LinearLayout>
		    
		    <RelativeLayout
		        android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        >
		    	<Button
				    android:id="@+id/btnActive"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerHorizontal="true"
				    android:text="@string/request_activation"
				    android:onClick="clickRequestActive"
				    android:longClickable="true"
				    />    
		    </RelativeLayout>
			
		    <RelativeLayout
		        android:layout_marginTop="20dp"
		        android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        >
		    	
			    <TextView
			        android:id="@+id/textStatus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:text=""
			        android:layout_centerHorizontal="true"
			        />
			    
		    </RelativeLayout>
			    
		</LinearLayout>
		
</ScrollView>